<resources>
    <string name="user_app_name">User</string>
    <string name="user_title_psw_forget">忘记密码</string>

    <string name="user_login">登录</string>
    <string name="user_register">注册</string>

    <string name="user_hint_phone">请输入手机号码</string>
    <string name="user_hint_psw">请输入密码</string>
    <string name="user_hint_code">请输入验证码</string>
    <string name="user_hint_newPsw">请输入新密码6~8位</string>
    <string name="user_hint_inviteCode">请输入邀请码</string>


    <string name="user_psw_forget">忘记密码?</string>
    <string name="user_code_send">获取验证码</string>
    <string name="user_inviteCode_to_get">如何获取邀请码？</string>
    <string name="user_protocol_agree">我已阅读并同意</string>
    <string name="user_protocol_note">《用户协议》</string>


    <string name="user_inviteCode_tip1">1.关注 众妆美库 微信公众号。</string>
    <string name="user_inviteCode_tip2">2.回复【邀请码】即得限量邀请码。</string>
    <string name="user_toast_protocol_check">请阅读并同意《用户协议》</string>
</resources>
