<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_400"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_60">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:src="@drawable/common_pop_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/user_inviteCode_to_get"
            android:textColor="@color/color_invitecode"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:text="@string/user_inviteCode_tip1"
            android:textColor="@color/color_invitecode"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_46"
            android:text="@string/user_inviteCode_tip2"
            android:textColor="@color/color_invitecode"
            android:textSize="@dimen/sp_30" />
    </LinearLayout>
</LinearLayout>